@@ -23,6 +23,8 @@ $ 2.1
 !IMPORTANT! Read <a href="http://wiki.flightgear.org/FlightGearMap">http://wiki.flightgear.org/FlightGearMap</a> for installation instructions.
   % Version 2.1b
   _ 2013-10-01
+    * New option to switch full screen off
+    * New option to center (or not) surfaces on screen
     * Shows the IP address in the main activity
     * Removes last references to Google Maps
     * Bug fixing: the comm panel couldn't be selected
